# maxplotlib

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_pipeline.yml  docs.yml  static_analysis.yml
docs/source/: conf.py  index.rst
src/maxplotlib/: __init__.py
src/maxplotlib/backends/matplotlib/: utils.py  utils_old.py
src/maxplotlib/canvas/: canvas.py
src/maxplotlib/colors/: colors.py
src/maxplotlib/console/: main.py
src/maxplotlib/linestyle/: linestyle.py
src/maxplotlib/logo/: logo.py
src/maxplotlib/objects/: layer.py
src/maxplotlib/subfigure/: line_plot.py  subfigure.py  tikz_figure.py
src/maxplotlib/tests/: test_canvas.py  test_imports.py
tutorials/: tutorial_01.ipynb  tutorial_02.ipynb  tutorial_03.ipynb  tutorial_03.py  tutorial_04.ipynb  tutorial_04.py  tutorial_05.ipynb  tutorial_05.py  tutorial_06.ipynb  tutorial_06.py  tutorial_07_tikzpics.ipynb  tutorial_1.ipynb
