[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxplotlib"
version = "0.1"
description = "A reproducible plotting module with various backends and export options."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["matplotlib"]
authors = [{name = "Max"}]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "matplotlib",
    "plotly",
    "pytest",
    "ruff",
    "black",
    "isort",
    "jupyterlab",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]
[project.urls]
"Source" = "https://github.com/max-models/maxplotlib"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
maxplotlib = "maxplotlib.console.main:maxplotlib"
